--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Můj první web</title>
+  <title>Můj první web na githubu</title>
 </head>
 <body>
   <h1>Hello World!</h1>
