--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Můj první web na githubu</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <p>Toto je moje první webová stránka na GitHub Pages.</p>
+  <h1>Ahoj!</h1>
+  <p>Toto je moje první webová stránka s.</p>
 </body>
 </html>
